<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>CombatCommander</groupId>
	<artifactId>CombatCommander</artifactId>
	<version>0.0.1-SNAPSHOT</version>

  <properties>
    <!-- set Vassal version here -->
    <vassal.version>3.6.0-beta6</vassal.version>

    <!-- set Java version here -->
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.vassalengine</groupId>
      <artifactId>vassal-app</artifactId>
      <version>${vassal.version}</version>
    </dependency>
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom2</artifactId>
			<version>2.0.5</version>
		</dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>vassal-releases</id>
      <url>https://vassalengine.org/maven/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
